[project]
name = "moveit-leaderboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-firestore>=2.27.0",
    "pandas>=3.0.3",
    "playwright>=1.60.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyrebase>=3.0.18",
    "sqlalchemy>=2.0.50",
    "streamlit>=1.58.0",
    "streamlit-ace>=0.1.1",
]
