[project]
name = "leaderboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "pandas>=3.0.3",
    "playwright==1.49.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.50",
    "streamlit>=1.58.0",
    "streamlit-ace>=0.1.1",
]

